@@ -1,0 +1,104 @@
+<?php
+
+/*
+ * This file is part of Linfo (c) 2010 Joseph Gillotti.
+ *
+ * Linfo is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * Linfo is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with Linfo.  If not, see <http://www.gnu.org/licenses/>.
+ *
+*/
+
+
+defined('IN_INFO') or exit;
+
+/*
+ * Italian translation
+ * By mte90 - http://www.mte90.net
+ */
+
+$lang = array(
+	'header' => 'Informazioni e Stato del Sistema',
+	'core' => 'Sistema',
+	'os' => 'SO',
+	'kernel' => 'Kernel',
+	'accessed_ip' => 'IP',
+	'uptime' => 'Uptime',
+	'hostname' => 'Hostname',
+	'cpus' => 'CPU',
+	'load' => 'Carico',
+	'processes' => 'Processi',
+	'threads' => 'Thread',
+	'total' => 'Totale',
+	'memory' => 'Memoria',
+	'type' => 'Tipo',
+	'free' => 'Libero',
+	'used' => 'Usato',
+	'size' => 'Dimensioni',
+	'physical' => 'Physical',
+	'swap' => 'Swap',
+	'network_devices' => 'Dispositivi di Rete',
+	'device_name' => 'Nome Dispositivo',
+	'amount_sent' => 'Totale Inviato',
+	'amount_received' => 'Totale Ricevuto',
+	'state' => 'Stato',
+	'temps_voltages' => 'Temperatura / Voltaggio',
+	'path' => 'Percorso',
+	'device' => 'Dispositivo',
+	'value' => 'Valore',
+	'hardware' => 'Hardware',
+	'vendor' => 'Produttore',
+	'type' => 'Tipo',
+	'drives' => 'Unit&agrave;',
+	'name' => 'Nome',
+	'reads' => 'Letture',
+	'writes' => 'Scritture',
+	'size' => 'Dimensioni',
+	'filesystem_mounts' => 'Montaggio FileSystem',
+	'mount_point' => 'Punto di Montaggio',
+	'filesystem' => 'Filesystem',
+	'used' => 'Usato',
+	'free' => 'Libero',
+	'percent_used' => 'Percentuale Usata',
+	'raid_arrays' => 'RAID Array',
+	'level' => 'Livello',
+	'status' => 'Stato',
+	'devices' => 'Dispositivi',
+	'label' => 'Etichetta',
+	'active' => 'Attivo',
+	'batteries' => 'Batterie',
+	'charge' => 'Caricamento',
+	'unknown' => 'Sconosciuto',
+	'footer_app' => 'Generatato da %s in %s secondi.',
+	'none_found' => 'Nessun risultato',
+	'sound_cards' => 'Schede Audio',
+	'number' => 'Numero',
+	'card' => 'Scheda',
+	'message' => 'Messaggio',
+	'from_where' => 'Sorgente',
+	'mount_options' => 'opzioni di Montaggio',
+	'error_head' => 'Data Gathering Error',
+	'timer' => 'Timer',
+	'area' => 'Area',
+	'time_taken' => 'Tempo usato per la generazione',
+	'days' => 'giorni',
+	'minutes' => 'minuti',
+	'seconds' => 'secondi',
+	'hours' => 'ore',
+	'pid' => 'PID',
+	'service' => 'Servizio',
+	'services' => 'Servizi',
+	'memory_usage' => 'Uso della Memoria',
+	'distro' => 'Distribuzione',
+	'cpu_arch' => 'Architettura',
+	'model' => 'Modello',
+);
