@@ -1,0 +1,104 @@
+<?php
+
+/*
+ * This file is part of Linfo (c) 2010 Joseph Gillotti.
+ * 
+ * Linfo is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ * 
+ * Linfo is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with Linfo.  If not, see <http://www.gnu.org/licenses/>.
+ * 
+*/
+
+
+defined('IN_INFO') or exit;
+
+/*
+ * Chinese translation
+ * 如果您有任何对翻译的建议请联系:Digimoncn@Gmail.com
+ */
+
+$lang = array(
+	'header' => 'System Health and Information',
+	'core' => '核心信息',
+	'os' => '操作系统',
+	'kernel' => '内核版本',
+	'accessed_ip' => 'IP地址',
+	'uptime' => '在线时间',
+	'hostname' => '主机名',
+	'cpus' => 'CPU',
+	'load' => '负载',
+	'processes' => '进程',
+	'threads' => '线程',
+	'total' => '总计',
+	'memory' => '内存',
+	'type' => '类型',
+	'free' => '可用',
+	'used' => '已用',
+	'size' => '总大小',
+	'physical' => '物理',
+	'swap' => 'Swap',
+	'network_devices' => '网络设备',
+	'device_name' => '设备名称',
+	'amount_sent' => '发送数据',
+	'amount_received' => '接收数据',
+	'state' => '状态',
+	'temps_voltages' => '温度 / 电压',
+	'path' => '地址',
+	'device' => '设备',
+	'value' => '值',
+	'hardware' => '硬件',
+	'vendor' => '制造商',
+	'type' => '类型',
+	'drives' => '硬盘',
+	'name' => '名称',
+	'reads' => '读取',
+	'writes' => '写入',
+	'size' => '总容量',
+	'filesystem_mounts' => '文件系统监控',
+	'mount_point' => '挂载点',
+	'filesystem' => '文件系统',
+	'used' => '已用',
+	'free' => '可用',
+	'percent_used' => '百分比',
+	'raid_arrays' => 'RAID阵列',
+	'level' => 'RAID类型',
+	'status' => '状态',
+	'devices' => '设备',
+	'label' => '标签',
+	'active' => '可用',
+	'batteries' => '电池',
+	'charge' => '剩余',
+	'unknown' => '未知',
+	'footer_app' => '由%s 生成,共花费 %s 秒.',
+	'none_found' => '未知',
+	'sound_cards' => '声卡',
+	'number' => '数量',
+	'card' => '卡片',
+	'message' => '消息',
+	'from_where' => '来源',
+	'mount_options' => '挂载设置',
+	'error_head' => '数据汇总错误',
+	'timer' => '计时器',
+	'area' => '区域',
+	'time_taken' => '获取用时',
+	'days' => '天',
+	'minutes' => '分钟',
+	'seconds' => '秒',
+	'hours' => '小时',
+	'pid' => 'PID',
+	'service' => '服务',
+	'services' => '服务',
+	'memory_usage' => '内存使用',
+	'distro' => '发行版',
+	'cpu_arch' => '架构',
+	'model' => '型号',
+);
